<resources>
    <string name="app_name">시소</string>
    <string name="word_basic_info">회원기본정보</string>
    <string name="word_name">이름</string>
    <string name="word_user_type">회원구분</string>
    <string name="word_email">이메일</string>
    <string name="word_birth">생년월일</string>
    <string name="word_phone">휴대폰번호</string>
    <string name="word_password">비밀번호</string>
    <string name="word_addr">주소</string>
    <string name="word_care_yn">돌봄희망</string>
    <string name="word_birth_name">태명</string>
    <string name="word_birth_exp_day">출산예정일</string>
    <string name="word_work_exp">아이돌봄 경험</string>
    <string name="word_skill">아이돌봄 특기</string>
    <string name="word_baby_gender">돌봄 아동 성별</string>
    <string name="word_baby_age">돌봄 아동 연령</string>
    <string name="word_commute_type">출퇴근 유형</string>
    <string name="word_commute_distance">출퇴근 거리</string>
    <string name="word_salary">희망 시급(급여)</string>
    <string name="word_schedule">근무스케줄</string>
    <string name="word_work_period">근무가능기간</string>
    <string name="word_work_env">희망 근무 조건</string>
    <string name="word_gender">성별</string>
    <string name="word_children_num">자녀수</string>
    <string name="word_nationality">국적</string>
    <string name="word_religion">종교</string>
    <string name="word_education">학력</string>
    <string name="word_license">자격증</string>
    <string name="word_brief">자기소개 한줄</string>
    <string name="word_introduction">자기소개</string>
    <string name="word_profile_photo">프로필 사진</string>
    <string name="sitter_list_tab_siso">시소추천</string>
    <string name="sitter_list_tab_favorite">관심시터</string>
    <string name="sitter_list_tab_send">요청시터</string>
    <string name="sitter_list_tab_receive">지원시터</string>
    <string name="sitter_list_accepted">시터가 연락처 공개를 수락하였습니다</string>
    <string name="sitter_list_accepting">시터에게 연락처 요청중입니다</string>
    <string name="sitter_list_reject">시터가 연락처 공개를 거절했습니다</string>
    <string name="sitter_list_rejected_by_sitter">시터님이 연락처 공개를 거절했습니다</string>
    <string name="sitter_list_phone_call">전화하기</string>
    <string name="parent_list_tab_siso">시소추천</string>
    <string name="parent_list_tab_favorite">관심일자리</string>
    <string name="parent_list_tab_send">연락처요청</string>
    <string name="parent_list_tab_receive">시터의뢰</string>
    <string name="title_activity_member_join_two">MemberJoinTwoActivity</string>
    <string name="title_activity_sitter_join_one">SitterJoinOne</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="member_title">무료 회원가입</string>
    <string name="login_title">로그인</string>
    <string name="find_email_title">이메일 찾기</string>
    <string name="find_password_title">비밀번호 찾기</string>
    <string name="sitter_title">시터 정보 등록하기</string>
    <string name="parent_title">부모 정보 등록하기</string>
    <string name="push_title">알리미 리스트</string>
    <string name="sitter_basic_title">시터 정보 등록하기</string>
    <string name="parent_index_title">구인 정보 등록하기</string>
    <string name="parent_chdrn_title">돌봄 아동 정보 입력</string>
    <string name="required">필수</string>
    <string name="btn_next">다 음</string>
    <string name="btn_confirm">확 인</string>
    <string name="btn_cancel">취 소</string>
    <string name="btn_login">로그인</string>
    <string name="btn_request">요 청</string>
    <string name="btn_reject">거 절</string>
    <string name="btn_delete">삭 제</string>
    <string name="btn_accept">수 락</string>
    <string name="btn_yes">예</string>
    <string name="btn_no">아니오</string>
    <string name="btn_modify">수정하기</string>
    <string name="btn_input_complete">등록완료</string>
    <string name="section">구분</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="morning">오전</string>
    <string name="afternoon">오후</string>
    <string name="evening">저녁</string>
    <string name="night">심야</string>
    <string name="time1">6~9시</string>
    <string name="time2">9~12시</string>
    <string name="time3">12~3시</string>
    <string name="time4">3~6시</string>
    <string name="time5">6~9시</string>
    <string name="time6">9~12시</string>
    <string name="time7">12~6시</string>
    <string name="salary_day">평균일당 : </string>
    <string name="salary_month">월급 : </string>
    <string name="salary_week">주급 : </string>
    <string name="salary_week_divide">/ 5</string>
    <string name="salary_hour">시간 * </string>
    <string name="salary_21_day">* 21일(월평균일수)</string>
    <string name="equal">=</string>
    <string name="input_type_number">number</string>
    <string name="input_type_email">email</string>
    <string name="input_type_phone">phone</string>
    <string name="login_find_email">이메일 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="login_find_password_success">해당 메일 주소로 비밀번호 재설정을 위한 메일이 발송 되었습니다</string>
    <string name="popup_addr_hint">예) 논현로 102</string>
    <string name="popup_addr_title">도로명 주소나 동이름을 입력해주세요</string>
    <string name="popup_input_keyword">검색어를 입력해 주시기 바랍니다</string>
    <string name="popup_no_found">검색 결과가 없습니다.</string>
    <string name="guide_00_title">시터를 소개합니다 시소에\n오신 것을 환영합니다</string>
    <string name="guide_00_comment">시소는 아이 키우기 좋은 대한민국을 위해\n 시터의 도움으로 아이를 키우고 있는\n 부모들이 직접 만든 시터 구인구직 서비스입니다.</string>
    <string name="guide_01_title">우리 가족에게 딱 맞는 조건의\n시터를 스마트하게 추천!</string>
    <string name="guide_01_comment">시소만의 매칭 알고리즘으로\n근무시간, 거리, 시급 등 원하는 조건에 맞는\n시터와 일자리를 추천해드립니다</string>
    <string name="guide_02_title"></string>
    <string name="guide_02_comment"></string>
    <string name="guide_03_title"></string>
    <string name="guide_03_comment"></string>
    <string name="guide_04_title"></string>
    <string name="guide_04_comment"></string>
    <string name="guide_05_title"></string>
    <string name="guide_05_comment"></string>
    <string name="member01_guide">다섯 단계의 간단한\n 절차만으로 ‘시소’의 모든\n 서비스를 무료로\n 이용하실 수 있습니다.</string>
    <string name="member01_select_user_type">시소에 오신 것을 환영합니다!\n이용하실 서비스를 선택해주세요.</string>
    <string name="member01_select_user_type_comment">서비스별 맞춤 구인/구직 정보를 소개해드립니다</string>
    <string name="member01_term">회원가입을 하면 시소의 서비스 약관 및\n개인정보보호정책에 동의하는 것으로 간주됩니다.</string>
    <string name="member01_user_typer_parent">부모회원</string>
    <string name="member01_user_typer_sitter">시터회원</string>
    <string name="member02_title">당신은 누구신가요?</string>
    <string name="member02_guide">상대방에게 신뢰감을 주기 위해\n반드시 실명과 실제 생일을 사용하세요</string>
    <string name="member02_et_name_label">이름이 무엇인가요?</string>
    <string name="member02_et_name_hint">홍길순</string>
    <string name="member02_et_birth_label">생년월일은 언제인가요?</string>
    <string name="member02_et_birth_hint">19801022</string>
    <string name="member03_title">로그인에 필요한\n정보를 입력해주세요</string>
    <string name="member03_guide">이메일과 비밀번호는 다른사람이\n 회원님의 계정을 사용하지 못하도록\n 도와줍니다. 신중하게 입력해주세요</string>
    <string name="member03_et_email_label">이메일 주소를 입력해주세요</string>
    <string name="member03_et_email_hint">siso@gringrid.net</string>
    <string name="member03_et_password_label">사용하실 비밀번호를 입력해주세요</string>
    <string name="member03_et_password_hint">******</string>
    <string name="member03_passwd_guide"> 비밀번호에는 최소 6자 이상의 문자, 숫자 및 기호가\n 포함되어야 합니다. </string>
    <string name="member04_title">휴대폰 번호를\n입력해주세요</string>
    <string name="member04_guide">본인 확인을 위해 필요하며\n 본인 동의 없이 상대방에게\n 공개되지 않으니 안심하세요</string>
    <string name="member04_btn_receive_auth_num">인증번호 받기</string>
    <string name="member04_et_phone_label">휴대폰 번호를 입력해주세요</string>
    <string name="member04_et_phone_hint">01012345678</string>
    <string name="member04_et_auth_num_hint">인증번호를 입력해주세요</string>
    <string name="member05_title">주소를 입력해주세요</string>
    <string name="member05_guide">가까운 거리에 시터와 일자리를\n 우선으로 찾아드립니다\n 개인정보 보호를 위해\n 상세주소는 노출되지 않으니 안심하세요</string>
    <string name="member05_btn_post_no_search">거주지 우편번호 검색</string>
    <string name="member05_et_post_no_hint">우편번호</string>
    <string name="member05_et_addr1_hint">서울특별시 강남구 논현로 102길 27</string>
    <string name="member05_et_addr2_hint">상세주소 입력</string>
    <string name="member05_terms_info">아래 가입완료 버튼을 누르면 시소 이용 약관에 동의하고\n 개인정보보호 정책을 읽고 이해하신 것으로 간주됩니다.\n 시소에서 구인/구직 현황관리를 하실 수 있으며\n 알림 메시지를 받을 수 있으며\n 언제든지 수신을 거부할 수 있습니다.</string>
    <string name="member06_title">축하합니다요</string>
    <string name="member06_guide">웰컴투 시소월드 ~ </string>
    <string name="postno_search_guide">도로명 주소나 동이름을 입력해주세요</string>
    <string name="postno_search_hint">논현로 102길 27</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="member04_job_title">직업을\n입력해주세요</string>
    <string name="member04_job_title_comment">직업을 입력해야 시소가 먹고 살아요. 부탁드립니다. 제발 입력해주세요.</string>
    <string name="member04_job_tg_officer">직장인</string>
    <string name="member04_job_tg_housewife">주부</string>
    <string name="member04_job_tg_selfEmployed">자영업</string>
    <string name="member04_job_tg_student">학생</string>
    <string name="member04_job_tg_write">직접입력</string>
    <string name="common_sitter_skill">시터로서의 매력을 뽐내보세요</string>
    <string name="common_sitter_skill_comment">아이를 돌볼 때 자신있는 분야를 선택해주세요</string>
    <string name="common_sitter_tg_skill_care">아이돌봄을\n잘해요</string>
    <string name="common_sitter_tg_skill_baby">베이비시터\n(아기전문 돌봄)</string>
    <string name="common_sitter_tg_skill_outdoor">야외놀이를\n잘해요</string>
    <string name="common_sitter_tg_skill_housekeeping">살림을\n잘해요</string>
    <string name="common_sitter_tg_skill_homework">숙제를\n잘 도와줘요</string>
    <string name="common_sitter_brief">나를 한줄로 표현해보세요!(20자 이내)</string>
    <string name="common_sitter_brief_hint">예)유치원교사 10년 출신시터예요 ~</string>
    <string name="common_sitter_introduce">시터로서의 매력을 어필해보세요(100자 이내)</string>
    <string name="common_sitter_introduce_hint">자기소개를 입력하는 영역입니다 총 200까지 입력이 가능합니다 자기소개를 입력하는 영역입니다 총 200까지 입력이 가능합니다</string>
    <string name="sitter00_stage1">돌봄 기본 정보 등록</string>
    <string name="sitter00_stage2">희망 근무 조건 등록</string>
    <string name="sitter00_stage3">시터 정보 등록</string>
    <string name="parent_complete_btn_sitter_list">시터 리스트 보기</string>
    <string name="parent_complete_btn_guide">좋은 시터를 구하고 싶나요?</string>
    <string name="parent_guide_txt1">
        우리 아이의 특성을 이해하고 아이와 잘 지낼 수 있는 시터를 찾는 것이 가장 중요합니다.\n
        급여, 시간, 거리 등의 조건도 중요하지만, 면접 시 육아경력이나 놀이방식 등의 질문을 통해 시터의 성향을 파악하세요.
    </string>
    <string name="parent_guide_txt2">아래 몇가지 사항들은 좋은 시터를 찾는데 도움이 될 것입니다.</string>
    <string name="parent_guide_topic1_title">뚜렷한 직업관</string>
    <string name="parent_guide_topic1_content">
        베이비 시터는 부모의 역할을 대신하는 직업으로 아이를 사랑으로 돌볼 수 있어야 합니다. 부모가 없는 동안 내 아이의 부모라는 생각을 가지고 일 할 수 있는 분을 선택하세요.
    </string>
    <string name="parent_guide_topic2_title">육아경력</string>
    <string name="parent_guide_topic2_content">
        아이들을 키워 보셨거나, 돌보거나 교육했던 경험이 있는 분을 선택하세요. 아이들의 특성을 이해할 수 있고, 노하우가 있어 예기치 못한 상황에도 잘 대처 할 수 있습니다.
    </string>
    <string name="parent_guide_topic3_title">놀이•교육</string>
    <string name="parent_guide_topic3_content">
        아이들과 빠르게 친해지고, 더 즐거운 시간을 보낼 수 있도록 종이접기, 블록 쌓기, 인형놀이, 책 읽어 주기 등의 놀이가 가능한 분이라면 더욱 좋습니다.
    </string>
    <string name="parent_guide_topic4_title">건강함</string>
    <string name="parent_guide_topic4_content">
        아이 돌봄은 아이를 업거나 안고, 뛰는 등의 신체적 활동이 필요한 일입니다. 건강관리 방법에 대해 문의해 보세요. 꾸준히 운동을 하시는 분이라면 더 좋습니다. (*부모는 면접 시 건강관련 검진결과서를 요구할 수도 있습니다. 고액의 검사를 요구하실 경우 검사비를 제공해야 합니다.)
    </string>
    <string name="parent_guide_topic5_title">책임감•성실함</string>
    <string name="parent_guide_topic5_content">
        베이비 시터 경력이 있는 분이라면, 이전 돌봄 서비스를 받은 가정과 연락하여 평판 조회를 통해 시터의 책임감과 성실함을 확인해 보세요.
    </string>
</resources>