
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
    <ScrollView
        android:id="@+id/id_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            tools:context=".fragments.Member01UserTypeFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <ImageView
                    android:id="@+id/id_iv_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_offer_complete"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_txt1"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_txt2"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic1_title"
                    style="@style/ParentGuideTitle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic1_content"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic2_title"
                    style="@style/ParentGuideTitle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic2_content"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic3_title"
                    style="@style/ParentGuideTitle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic3_content"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic4_title"
                    style="@style/ParentGuideTitle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic4_content"
                    style="@style/ParentGuideContent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic5_title"
                    style="@style/ParentGuideTitle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent_guide_topic5_content"
                    style="@style/ParentGuideContent"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/id_tv_btn_sitter_list"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/SisoNextButton"
        android:text="@string/parent_complete_btn_sitter_list"
        />

    <TextView
        android:id="@+id/id_tv_btn_guide"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/SisoNextButton"
        android:text="@string/parent_complete_btn_guide"
        />
</LinearLayout>
