<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:orientation="vertical"
    >
    <net.gringrid.siso.views.SisoSitterListCommon
        android:id="@+id/id_sslc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </net.gringrid.siso.views.SisoSitterListCommon>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_30"
        style="@style/SisoJobLine30"
        />

    <LinearLayout
        android:id="@+id/id_ll_accepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sitter_list_accepted"/>
        <TextView
            android:id="@+id/id_tv_phone_call"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            style="@style/SisoRoundButtonGreen"
            android:text="@string/sitter_list_phone_call"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_ll_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/id_tv_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sitter_list_accepted"/>
        <TextView
            android:id="@+id/id_tv_other_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/SisoRoundButtonWhite"
            android:text="@string/btn_cancel"
            />
    </LinearLayout>

</LinearLayout>
